--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 wb-mqtt-serial (2.213.0) stable; urgency=medium
 
-  * MR templates: Add delays, change min time for cutains
+  * MR templates: Add delays, change min time for curtains
 
  -- Ilia Skochilov <ilia.skochilov@wirenboard.com>  Mon, 5 Jan 2026 14:05:00 +0300
 
