--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.213.0) stable; urgency=medium
+
+  * MAP3ET template: Add parameters: turns, phi, actual phase, CT reverse
+
+ -- Ilia Skochilov <ilia.skochilov@wirenboard.com>  Tue, 13 Jan 2026 09:25:00 +0300
+
 wb-mqtt-serial (2.212.3) stable; urgency=medium
 
   * MAP6S and MAP3E: Add unsupported values for peaks
