--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.214.0) stable; urgency=medium
+
+  * Add HW Batch Number channel
+
+ -- Sergey Nikitenko <siarhei.nikitsenka@wirenboard.com>  Wed, 14 Jan 2026 17:47:00 +0300
+
 wb-mqtt-serial (2.213.0) stable; urgency=medium
 
   * MAP3ET template: Add parameters: turns, phi, actual phase, CT reverse
