--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
-wb-mqtt-serial (2.213.0) stable; urgency=medium
+wb-mqtt-serial (2.214.0) stable; urgency=medium
 
   * Add ENGO EFAN Template
 
- -- Ilya Tikhonyuk <ilya.tikhonyuk@wirenboard.com>  Tue, 09 Jan 2026 19:00:00 +0300
+ -- Ilya Tikhonyuk <ilya.tikhonyuk@wirenboard.com>  Wed, 14 Jan 2026 19:00:00 +0300
+
+wb-mqtt-serial (2.213.0) stable; urgency=medium
+
+  * MAP3ET template: Add parameters: turns, phi, actual phase, CT reverse
+
+ -- Ilia Skochilov <ilia.skochilov@wirenboard.com>  Tue, 13 Jan 2026 09:25:00 +0300
 
 wb-mqtt-serial (2.212.3) stable; urgency=medium
 
