--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.213.1) stable; urgency=medium
+
+  * Fix translations for mst-24 template
+
+ -- Mikhail Burchu <mikhail.burchu@wirenboard.com>  Thu, 15 Jan 2025 15:30:00 +0300
+
 wb-mqtt-serial (2.213.0) stable; urgency=medium
 
   * MAP3ET template: Add parameters: turns, phi, actual phase, CT reverse
