--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.215.1) stable; urgency=medium
+
+  * WB-UPS v.3 template: fix battery temperature register format
+
+ -- Pavel Gasheev <pavel.gasheev@wirenboard.com>  Fri, 16 Jan 2026 11:40:34 +0300
+
 wb-mqtt-serial (2.215.0) stable; urgency=medium
 
   * Set compatible firmwares for parameters and channels in
