--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.216.0) stable; urgency=medium
+
+  * MAO4(20) and MDM3 templates: Change lower dimmer level to 0 for powerup and safety actions (was 1).
+
+ -- Ilia Skochilov <ilia.skochilov@wirenboard.com>  Fri, 16 Jan 2026 14:54:00 +0300
+
 wb-mqtt-serial (2.215.0) stable; urgency=medium
 
   * Set compatible firmwares for parameters and channels in
