--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.217.1) stable; urgency=medium
+
+  * Fix translations for mst-24 template
+
+ -- Mikhail Burchu <mikhail.burchu@wirenboard.com>  Mon, 19 Jan 2026 16:00:00 +0300
+
 wb-mqtt-serial (2.217.0) stable; urgency=medium
 
   * MR templates: Add delays, change min time for curtains
