Add ENGO EFAN Template (#1048)
* Add ENGO EFAN Template

* Update config-engo-efan.json

* Update changelog

* Update changelog

* update TDeviceTemplatesTest.Validate.dat

* Removed unnecessary chanells param, update changelog

* Delete titles in engo efan json

* Update config-engo-efan.json - add readobly in version

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.218.0) stable; urgency=medium
+
+  * Add ENGO EFAN Template
+
+ -- Ilya Tikhonyuk <ilya.tikhonyuk@wirenboard.com>  Mon, 19 Jan 2026 16:50:00 +0300
+
 wb-mqtt-serial (2.217.1) stable; urgency=medium
 
   * Fix translations for mst-24 template
