--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.180.2-wb101-cb8ea449-1) stable; urgency=medium
+
+  * Vendor (cb8ea449): Update vendor module names
+
+ -- Anton Tarasov <anton.tarasov@wirenboard.com>  Tue, 20 Jan 2026 16:15:12 +0300
+
 wb-mqtt-serial (2.180.2-wb101-cb8ea449) stable; urgency=medium
 
   * Vendor (cb8ea449): port custom template ordering/names to 2.180.2-wb101
