Change package name for wb8

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-wb-mqtt-serial (2.180.2-wb101-cb8ea449-1) stable; urgency=medium
+wb-mqtt-serial (2.180.2-wb101-cb8ea449-wb8) stable; urgency=medium
 
   * Vendor (cb8ea449): Update vendor module names
 
