--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
-wb-mqtt-serial (2.180.2-wb101-cb8ea449b) stable; urgency=medium
+wb-mqtt-serial (2.180.2-wb101-cb8ea449-wb8) stable; urgency=medium
+
+  * Vendor (cb8ea449): Update vendor module names
+
+ -- Anton Tarasov <anton.tarasov@wirenboard.com>  Tue, 20 Jan 2026 16:15:12 +0300
+
+wb-mqtt-serial (2.180.2-wb101-cb8ea449) stable; urgency=medium
 
   * Vendor (cb8ea449): port custom template ordering/names to 2.180.2-wb101
 
- -- Ekaterina Volkova <ekaterina.volkova@wirenboard.com>  Mon, 03 Feb 2025 12:00:00 +0300
+ -- Ekaterina Volkova <ekaterina.volkova@wirenboard.com>  Wed, 12 Nov 2025 14:40:20 +0300
 
 wb-mqtt-serial (2.180.2-wb101) stable; urgency=medium
 
