--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.220.0) stable; urgency=medium
+
+  * Use default values for parameters that are not present in config
+
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Tue, 27 Jan 2026 07:52:02 +0300
+
 wb-mqtt-serial (2.219.2) stable; urgency=medium
 
   * Fix misprint in ENGO EFAN Template
@@ -113,7 +119,7 @@ wb-mqtt-serial (2.209.0) stable; urgency=medium
 
 wb-mqtt-serial (2.208.0) stable; urgency=medium
 
-  * Set compatible firmwares for parameters and channels in MAP12E, WB-LED, WB-MDM3, 
+  * Set compatible firmwares for parameters and channels in MAP12E, WB-LED, WB-MDM3,
     WB-MWAC, WB-MAO4, WB-MR3, WB-MR6C v.3, WB-MRM2-MINI, WB-MRWM2 and WB-MWAC2 templates
 
  -- Alexander Getman <alexander.getman@wirenboard.com>  Tue, 16 Dec 2025 09:37:03 +0300
