--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.221.1) stable; urgency=medium
+
+  * Fix readonly flags in WBE2-I-EBUS
+
+ -- Andrey Ksenofontov <andrey.ksenofontov@wirenboard.com>  Mon, 02 Feb 2026 23:16:00 +0300
+
 wb-mqtt-serial (2.221.0) stable; urgency=medium
 
   * Add inactive power regs to map3e, map3et, map6s
