WB-MR templates: Fix translations, change the term "curtain" with "actuator" (#1062)
* WB-MR templates: Fix translations, change the term "curtain" with "actuator"

* Fix syntax errors

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+wb-mqtt-serial (2.221.1) stable; urgency=medium
+
+  * WB-MR templates: Fix translations, change the term "curtain" with "actuator"
+
+ -- Denis Nikolaev <denis.nikolaev@wirenboard.com>  Wed, 03 Feb 2026 15:00:00 +0300
 wb-mqtt-serial (2.221.0) stable; urgency=medium
 
   * Add inactive power regs to map3e, map3et, map6s
