--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.222.1) stable; urgency=medium
+
+  * Fix readonly flags in WBE2-I-EBUS
+
+ -- Andrey Ksenofontov <andrey.ksenofontov@wirenboard.com>  Tue, 03 Feb 2026 11:51:00 +0300
+ 
 wb-mqtt-serial (2.222.0) stable; urgency=medium
 
   * Add firmvare version checks for device channels
