--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.223.0) stable; urgency=medium
+
+  * Add template for Ventmachine Colibri 650
+
+ -- Aleksey Golovchenko <Aleksey.golovchenko@wirenboard.com>  Tue, 03 Feb 2026 17:00:00 +0300
+
 wb-mqtt-serial (2.222.1) stable; urgency=medium
 
   * Fix readonly flags in WBE2-I-EBUS
