--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
 wb-mqtt-serial (2.223.0) stable; urgency=medium
 
-  * Add template for Ventmachine Colibri 650
+  * Add template for Ventmachine Colibri 650 GTC
 
- -- Aleksey Golovchenko <Aleksey.golovchenko@wirenboard.com>  Tue, 03 Feb 2026 17:00:00 +0300
+ -- Aleksey Golovchenko <Aleksey.golovchenko@wirenboard.com>  Tue, 05 Feb 2026 18:00:00 +0300
 
 wb-mqtt-serial (2.222.1) stable; urgency=medium
 
