--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+wb-mqtt-serial (2.222.3) stable; urgency=medium
+
+  * Fix 64-bit integers precision bug for Device/Load and Device/LoadConfig RPC
+  * Fix 64-bit integers precision bug for setup items
+  * Fix setup item condition parameters with default value bug
+
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Wed, 05 Feb 2026 15:09:16 +0300
+
 wb-mqtt-serial (2.222.2) stable; urgency=medium
 
   * Add retry for reading device information in port/Scan RPC
@@ -9,7 +17,7 @@ wb-mqtt-serial (2.222.1) stable; urgency=medium
   * Fix readonly flags in WBE2-I-EBUS
 
  -- Andrey Ksenofontov <andrey.ksenofontov@wirenboard.com>  Tue, 03 Feb 2026 11:51:00 +0300
- 
+
 wb-mqtt-serial (2.222.0) stable; urgency=medium
 
   * Add firmvare version checks for device channels
