--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.223.0) stable; urgency=medium
+
+  * Use read only configuration parameters for Device/LoadConfig RPC parameter conditions
+
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Mon, 09 Feb 2026 15:40:21 +0300
+
 wb-mqtt-serial (2.222.3) stable; urgency=medium
 
   * Fix 64-bit integers precision bug for Device/Load and Device/LoadConfig RPC
