--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.224.0) stable; urgency=medium
+
+  * Use read only configuration parameters for Device/LoadConfig RPC parameter conditions
+
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Tue, 10 Feb 2026 11:38:21 +0300
+
 wb-mqtt-serial (2.223.0) stable; urgency=medium
 
   * Add template for Ventmachine Colibri 650 GTC
@@ -10,7 +16,7 @@ wb-mqtt-serial (2.222.3) stable; urgency=medium
   * Fix 64-bit integers precision bug for setup items
   * Fix setup item condition parameters with default value bug
 
- -- Ilya Titov <ilya.titov@wirenboard.com>  Wed, 05 Feb 2026 15:09:16 +0300
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Thu, 05 Feb 2026 15:09:16 +0300
 
 wb-mqtt-serial (2.222.2) stable; urgency=medium
 
