--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.225.0) stable; urgency=medium
+
+  * Add "no_cache" parameters option for Device/LoadConfig RPC
+
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Tue, 10 Feb 2026 14:39:21 +0300
+
 wb-mqtt-serial (2.224.0) stable; urgency=medium
 
   * Use read only configuration parameters for Device/LoadConfig RPC parameter conditions
@@ -9,7 +15,7 @@ wb-mqtt-serial (2.223.0) stable; urgency=medium
   * Add template for Ventmachine Colibri 650 GTC
 
  -- Aleksey Golovchenko <Aleksey.golovchenko@wirenboard.com>  Thu, 05 Feb 2026 18:00:00 +0300
- 
+
 wb-mqtt-serial (2.222.3) stable; urgency=medium
 
   * Fix 64-bit integers precision bug for Device/Load and Device/LoadConfig RPC
