--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.225.1) stable; urgency=medium
+
+  * Fix timeouts to reduce warnings * Rename template
+
+ -- Aleksey Golovchenko <Aleksey.golovchenko@wirenboard.com>  Thu, 12 Feb 2026 16:40:00 +0300
+
 wb-mqtt-serial (2.225.0) stable; urgency=medium
 
   * Set unsupported registers value to "unsupported" for device/LoadConfig RPC
