--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
+wb-mqtt-serial (2.225.3) stable; urgency=medium
+
+  * Add "w1-id" control type
+
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Tue, 17 Feb 2026 10:53:23 +0300
+
 wb-mqtt-serial (2.225.2) stable; urgency=medium
 
   * Fix disconnected device write retries port blocking bug
 
- -- Ilya Titov <ilya.titov@wirenboard.com>  Fri, 17 Feb 2026 10:34:23 +0500
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Tue, 17 Feb 2026 10:34:23 +0300
 
 wb-mqtt-serial (2.225.1) stable; urgency=medium
 
@@ -14,7 +20,7 @@ wb-mqtt-serial (2.225.0) stable; urgency=medium
 
   * Set unsupported registers value to "unsupported" for device/LoadConfig RPC
 
- -- Ilya Titov <ilya.titov@wirenboard.com>  Wed, 11 Feb 2026 11:34:19 +0500
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Wed, 11 Feb 2026 11:34:19 +0300
 
 wb-mqtt-serial (2.224.0) stable; urgency=medium
 
