--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.225.4) stable; urgency=medium
+
+  * Make enum_titles optional for channels
+
+ -- Nikolay Korotkiy <nikolay.korotkiy@wirenboard.com>  Tue, 17 Feb 2026 16:00:00 +0400
+
 wb-mqtt-serial (2.225.3) stable; urgency=medium
 
   * Add "w1-id" control type
