--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.226.0) stable; urgency=medium
+
+  * WB-LED and WB-MRGBW-D fw3 templates: Add CCT power normalization parameters
+
+-- Maxim Toropov <maxim.toropov@wirenboard.com>  Wed, 18 Feb 2026 16:44:00 +0300
+
 wb-mqtt-serial (2.225.5) stable; urgency=medium
 
   * Fix readonly flag in WBE2-I-EBUS
