--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.227.0) stable; urgency=medium
+
+  * WB-LED and WB-MRGBW-D fw3 templates: Add CCT power normalization parameters
+
+ -- Maxim Toropov <maxim.toropov@wirenboard.com>  Fri, 20 Feb 2026 11:35:00 +0300
+
 wb-mqtt-serial (2.226.1) stable; urgency=medium
 
   * Merge WASM branch into master, no functional changes
