--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.226.2) stable; urgency=medium
+
+  * Fix device/Load RPC prepare session bug
+
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Wed, 25 Feb 2026 06:27:42 +0300
+
 wb-mqtt-serial (2.226.1) stable; urgency=medium
 
   * Merge WASM branch into master, no functional changes
