--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.180.2-wb101-cb8ea449-wb8-1) stable; urgency=medium
+
+  * Move changes from custom-settings
+
+ -- Anton Tarasov <anton.tarasov@wirenboard.com>  Wed, 25 Feb 2026 17:43:13 +0300
+
 wb-mqtt-serial (2.180.2-wb101-cb8ea449-wb8) stable; urgency=medium
 
   * Vendor (cb8ea449): Update vendor module names
